# pg-utils

./: .gitignore  README.md  generate  init  migrator  pyproject.toml
lib/migrator/: execute.py  init.py  init.sql  make.py
lib/type-gen/: generate.js  package-lock.json  package.json
